--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
+    "file-saver": "^2.0.2",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dnd": "^9.3.2",
